сделала страницу registration

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --grey: #e5e5e5;
     --white: #FFFFFF;
     --dark-grey: #575757;
+    --light-grey: #B1B1B1;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 19px;
+    box-sizing: border-box;
 }
 
 .container {
@@ -321,6 +323,10 @@ a:active {
     min-height: 581px;
     width: 360px;
     margin: 30px 0 0 0;
+    position: relative;
+    flex-wrap: wrap;
+    transition: .5s;
+    overflow: hidden;
 }
 
 .products__list--box {
@@ -342,20 +348,23 @@ a:active {
     align-items: center;
     border: 1px solid #FFFF;
     background: none;
-    display: none;
-    z-index: 1;
-    backdrop-filter: brightness(0.5);
+    opacity: 0;
+    transition: .5s;
 }
 
+.products__list--link {
+    transition: .5s;
+}
 
+.products__list--link:hover .button_cart {
+    opacity: 1;
+}
 
 .products__list--link:hover {
     filter: brightness(0.3);
+    transform: scale(1.2);
 }
 
-.products__list--box:hover button {
-    display: block;
-}
 
 .products__list--information {
     padding: 0 0 0 16px;
@@ -614,10 +623,12 @@ a:active {
     margin: 49px 0 0;
     display: flex;
     align-items: center;
+    transition: all .5s 2s;
 }
 
 .products__button:hover path,
-.products__button:hover {
+.products__button:hover,
+.products__button:focus {
     background-color: #EF5B70;
     color: var(--white);
     fill: var(--grey);
@@ -801,6 +812,7 @@ a:active {
     line-height: 17px;
     border: 1px solid #A4A4A4;
     cursor: pointer;
+    transition: .5s;
 }
 
 .cart__button:hover {
@@ -886,3 +898,87 @@ a:active {
 .filter__list li {
     position: relative;
 }
+
+.registration__contents {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 96px;
+}
+
+.registration__form legend {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.registration__form .input {
+   width: 360px;
+   height: 45px;
+   padding: 0 0 0 16px;
+   margin: 20px 0 0 0;
+}
+
+.registration__form .radio {
+    width: 17px;
+    height: 17px;
+    padding: 0;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 13px;
+ }
+
+ .registration__form label {
+    padding: 0;
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 13px;
+ }
+
+ .details {
+     margin: 35px 0 0 0;
+
+ }
+
+
+ .registration__radio {
+    display: flex;
+    align-items: center;
+    margin: 30px 0 0 0;
+}
+ 
+
+ .registration__text {
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 16px;
+    color: var(--light-grey);
+    margin: 15px 0 0 0;
+ }
+
+ .registration__input {
+     padding: 16px 25px;
+     margin: 39px 0 0 0;
+ }
+
+ .registration__list {
+    width: 50%;
+ }
+
+ .registration__list h3, p, li {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    padding: 0 0 22px;
+ }
+
+ .registration__list ul li:before {
+    font-family: 'FontAwesome';
+    content: '\f00c';
+    color:var(--black);
+    margin: 0 23px 0 0;
+ }
+
+ 
+
+
+
